Version ClaSS-1.0.30 release (2012/09/18)
-------------------------------------------

Updated the class sizes page in Admin.

Updated the manage homework in Report.




Version ClaSS-1.0.29 release (2012/09/12)
-------------------------------------------

The component table new preserves curriculum structure from year to
year. TODO: update year_end to match.

Updated ldap scripts to match new class structure.

Improved performance issues with messages.

Updated homework functions to match new class structure.



Version ClaSS-1.0.28 release (2012/09/08)
-------------------------------------------

Added new fields for education to the users table.

Bugfix to list_sid_responsible_users.



Version ClaSS-1.0.27 release (2012/09/02)
-------------------------------------------

Shortcut links in student tables moved out to a generic script. 

The "I" for incidents removed.

Major change to Comments list page. A new comment can now lead to
either an incident (-ve comment) or a merit (+ve comment).

Fix to yearend for repeat students in first year group.

Fix to new_edit_class to avoid duplicates.

InfoBook option for teachers to search by different student fields.

Made the tiny_mce new version default.

New option to refresh class lists through the Admin class_matrix.



Version ClaSS-1.0.26 release (2012/08/15)
-------------------------------------------

Added an examcenter field to the eidsid table - to be used when
transferring results between centers.

list_sections function creates access groups if they don't exist.

New display_student_sentype function for decorating the support 'S'.

Predefined messages now use xsl templates for formatting. Example contact 
update form added.


Version ClaSS-1.0.25 release (2012/08/12)
-------------------------------------------

Profile column of type dif now works with raw values and grades.

Fix demoiser to work with new class ids.

Added a flag to the classes table to identify those taught by their
form tutors.
