@@ -75,8 +75,8 @@ print '('.$Student['RegistrationGroup']['value'].')';
 	  <div class="right">
 <?php 
 				
-if($CFG->emailguardiancomments=='yes' or ($CFG->emailguardiancomments=='epf' and $perm['x']==1)){
-		$checkname='guardianemail';$checkcaption=get_string('sharewithguardian',$book);
+if($_SESSION['worklevel']>-1 and ($CFG->emailguardiancomments=='yes' or ($CFG->emailguardiancomments=='limit' and $perm['x']==1))){
+		$checkname='sharewithparents';$checkcaption=get_string('sharewithguardian',$book);
 		$checkalert=get_string('sharecommentalert',$book);
 		include('scripts/check_yesno.php');
 		unset($checkalert);
