@@ -12,10 +12,16 @@ if(isset($_POST['bid']) and $_POST['bid']!=''){$bid=$_POST['bid'];}else{$bid='G'
 if(isset($_POST['catid'])){$catid=$_POST['catid'];}else{$catid='';}
 if(isset($_POST['ratvalue'])){$ratvalue=$_POST['ratvalue'];}else{$ratvalue='N';}
 if(isset($_POST['newyid'])){$newyid=$_POST['newyid'];}else{$newyid=$Student['YearGroup']['value'];}
-if(isset($_POST['guardianemail0'])){$guardianemail=$_POST['guardianemail0'];}else{$guardianemail='no';}
+if(isset($_POST['sharewithparents0'])){$sharewithparents=$_POST['sharewithparents0'];}else{$sharewithparents='no';}
 if(isset($_POST['teacheremail0'])){$teacheremail=$_POST['teacheremail0'];}else{$teacheremail='no';}
 if(isset($_POST['senemail0'])){$senemail=$_POST['senemail0'];}else{$senemail='no';}
 
+if(isset($CFG->eportfolio_db) and $CFG->eportfolio_db!=''){
+	$sharewithepf='yes';
+	}
+else{
+	$sharewithepf='no';
+	}
 
 include('scripts/sub_action.php');
 
@@ -111,7 +117,7 @@ include('scripts/sub_action.php');
 		$message='<p>'.$messagesubject.'</p><p>Subject: '. display_subjectname($bid).'</p>'. 
 				'<p>Posted by '.$teachername. '</p>';
 		$message.='<p>'. $detail. '</p>';
-		if($guardianemail=='yes' and ($Student['Boarder']['value']=='N' or $CFG->emailboarders=='yes')){
+		if($sharewithparents=='yes' and ($Student['Boarder']['value']=='N' or $CFG->emailboarders=='yes')){
 			$message.='<p>Note: this message has been shared with parents.</p>';
 			}
 		$message.='<br /><hr><p>'. $footer.'</p>';
@@ -120,7 +126,7 @@ include('scripts/sub_action.php');
 		$messagetxt=$messagesubject."\r\n".'Subject: '. display_subjectname($bid)."\r\n". 
 				'Posted by '.$teachername. "\r\n";
 		$messagetxt.=$detail. "\r\n";
-		if($guardianemail=='yes' and ($Student['Boarder']['value']=='N' or $CFG->emailboarders=='yes')){
+		if($sharewithparents=='yes' and ($Student['Boarder']['value']=='N' or $CFG->emailboarders=='yes')){
 			$messagetxt.='Note: this message has been shared with parents.'."\r\n";
 			}
 		$messagetxt.="\r\n". '--'. "\r\n" . $footer;
@@ -145,8 +151,8 @@ include('scripts/sub_action.php');
 				}
 			}
 		
-		/* Option to message parents. */
-		if($guardianemail=='yes' and ($Student['Boarder']['value']=='N' or $CFG->emailboarders=='yes')){
+		/* Option to message parents directly by email if the eportoflio is not configured. */
+		if($sharewithparents=='yes' and $sharewithepf=='no' and ($Student['Boarder']['value']=='N' or $CFG->emailboarders=='yes')){
 			$Contacts=(array)fetchContacts_emails($sid);
 			$footer=get_string('guardianemailfooterdisclaimer');
 			$message='<p>'.$messagesubject.'</p><p>'. 'Subject: ' .display_subjectname($bid).'</p>'. 
@@ -161,7 +167,7 @@ include('scripts/sub_action.php');
 			$messagetxt.="\r\n". '--'. "\r\n" . $footer;
 
 
-			if($Contacts and $CFG->emailoff!='yes' and $CFG->emailguardiancomments=='yes'){
+			if($Contacts and $CFG->emailguardiancomments=='yes'){
 				if(sizeof($Contacts)>0){
 					mysql_query("UPDATE comments SET guardians='1' WHERE id='$commentid';");
 					foreach($Contacts as $index => $Contact){
@@ -179,8 +185,12 @@ include('scripts/sub_action.php');
 	/**
 	 * This could be needed after an edit or for a new comment which
 	 * is why its outside the above condition.
+	 *
+	 * Option to share with parents through the eportfolio. Rely on
+	 * the eportfolio to message the parent about the comment being
+	 * posted.
 	 */
-	if($commentid!='' and $guardianemail=='yes' and $CFG->emailguardiancomments=='epf' ){
+	if($commentid!='' and $sharewithparents=='yes' and $sharewithepf='yes'){
 		require_once($CFG->dirroot.'/lib/eportfolio_functions.php');
 		$epfu=$Student['EPFUsername']['value'];
 		$title='Subject: ' .display_subjectname($bid);
@@ -188,8 +198,8 @@ include('scripts/sub_action.php');
 		if($CFG->eportfolio_db!='' and $epfu!=''){
 			/* Set guardians field in comments table to 1 to indicate shared. */
 			mysql_query("UPDATE comments SET guardians='1' WHERE id='$commentid';");
-	   		elgg_new_comment($epfu,$entrydate,$message,$title,$tid);
-   			$result[]='Shared with parents.';
+			elgg_new_comment($epfu,$entrydate,$message,$title,$tid);
+			$result[]='Shared with parents.';
 			}
 		}
 
